--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Reversi</string>
-    <string name="title_activity_game">GameActivity</string>
+    <string name="app_name">FMT Reversi</string>
+    <string name="title_activity_game">FMT Reversi</string>
 
     <string name="action_settings">Settings</string>
 
