--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,12 @@
     <string name="hint">HINT</string>
     <string name="title_activity_home">HomeActivity</string>
     <string name="title_end">Game result</string>
+    <string name="logo_description">logo</string>
+    <string name="cpu_vs_player2">CPU vs Player 2</string>
+    <string name="player1_vs_player2">Player 1 vs Player 2</string>
+    <string name="player1_vs_CPU2">Player 1 vs CPU 2</string>
+    <string name="cpu_vs_cpu">CPU 1 vs CPU 2</string>
+    <string name="player1_score">player1_score</string>
+    <string name="player2_score">player2_score</string>
+    <string name="selector">selector</string>
 </resources>
