--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
 
 
     <string name="base_url">https://fmt-reversi.herokuapp.com/</string>
+    <string name="signin_other_error">There was some problems to login</string>
 </resources>
