--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,23 +4,14 @@
 
     <string name="action_settings">Settings</string>
 
-    <string name="ass1">Assignment 1</string>
-    <string name="game">Othello</string>
-
-    <string name="othello">OTHELLO</string>
-    <string name="black">BLACK : 2</string>
-    <string name="white">WHITE : 2</string>
-    <string name="black_wins">BLACK WINS!</string>
-    <string name="white_wins">WHITE WINS!</string>
-    <string name="no_move">Turn skipped!</string>
-    <string name="ties">GAME DRAW!</string>
-    <string name="restart">Please start a new game!</string>
     <string name="newGame">NEW GAME</string>
     <string name="question_newGame">Start a new game?</string>
     <string name="hint">HINT</string>
     <string name="title_activity_home">HomeActivity</string>
     <string name="title_end">Game result</string>
+
     <string name="logo_description">logo</string>
+
     <string name="cpu_vs_player2">CPU 1 vs Player 2</string>
     <string name="player1_vs_player2">Player 1 vs Player 2</string>
     <string name="player1_vs_CPU2">Player 1 vs CPU 2</string>
@@ -29,7 +20,11 @@
     <string name="player2_score">player2_score</string>
     <string name="selector">selector</string>
 
-
-    <string name="base_url">https://fmt-reversi.herokuapp.com/</string>
     <string name="signin_other_error">There was some problems to login</string>
+
+    <!-- Player label -->
+    <string name="player1_human">Player 1</string>
+    <string name="player2_human">Player 2</string>
+    <string name="player1_cpu">CPU 1</string>
+    <string name="player2_cpu">CPU 2</string>
 </resources>
