--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="player2_human">Player 2</string>
     <string name="player1_cpu">CPU 1</string>
     <string name="player2_cpu">CPU 2</string>
+    <string name="player_vs_network">PLAYER VS NETWORK</string>
 </resources>
