--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="player1_cpu">CPU 1</string>
     <string name="player2_cpu">CPU 2</string>
     <string name="player_vs_network">PLAYER VS NETWORK</string>
+    <string name="player_network">Remote</string>
 </resources>
