--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,9 @@
 
     <string name="signin_other_error">There was some problems to login</string>
 
+    <!-- activity title -->
+    <string name="title_activity_reversi">FMT Reversi</string>
+
     <!-- Player label -->
     <string name="player1_human">Player 1</string>
     <string name="player2_human">Player 2</string>
@@ -30,4 +33,34 @@
     <string name="player_vs_network">PLAYER VS NETWORK</string>
     <string name="player_network">Remote</string>
     <string name="please_wait">Please wait</string>
+    <string name="title_activity_settings">SettingsActivity</string>
+
+    <!-- Preference Titles -->
+    <string name="messages_header">Messages</string>
+    <string name="sync_header">Sync</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title">Your signature</string>
+    <string name="reply_title">Default reply action</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title">Sync email periodically</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails
+    </string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+
+    <!-- Strings used for fragments for navigation -->
+    <string name="played_matches_label">Played matches</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="preferences">Preferences</string>
+    <string name="no_data">No match found</string>
+    <string name="action_played_matches">Played matches</string>
 </resources>
